--- a/src/components/Graph/graph.css
+++ b/src/components/Graph/graph.css
@@ -5,17 +5,18 @@
 	column-gap: 1rem;
 	transition: width 0.25s ease-out;
 }
-.graphContainer p {
+.graph > p {
 	background-color: #f8f9fc;
 	display: flex;
 	padding: 1rem 0.5rem;
 	border: 1px solid rgba(211, 211, 211, 0.5);
 }
-.graphContainer span {
+.graph > p > span {
 	padding: 0 1rem;
 	font-size: 1rem;
 	color: #4e73df;
 	font-weight: bold;
+	margin-right: auto;
 }
 .verticon {
 	margin-left: auto;
@@ -32,7 +33,31 @@
 	max-height: 17.5rem;
 }
 .graph {
+	position: relative;
 	z-index: 1;
+}
+.graphPopup {
+	position: absolute;
+	z-index: 100;
+	top: 2.5rem;
+	right: 1.25rem;
+	width: 6rem;
+	font-size: 0.5rem;
+	padding: 0.5rem 0;
+	border: 1px solid rgba(211, 211, 211, 0.5);
+	background-color: white;
+}
+.graphPopup span {
+	color: lightgray;
+	font-size: 0.5rem;
+	padding-left: 0.5rem;
+}
+.graphPopup p:not(last-child) {
+	padding-left: 0.5rem;
+}
+.graphPopup p:last-child {
+	width: 100%;
+	border-top: 1px solid darkgray;
 }
 .graph2 {
 	margin-top: 1.5rem;
