--- a/src/components/Graph/graph.css
+++ b/src/components/Graph/graph.css
@@ -41,7 +41,9 @@
 	z-index: 100;
 	top: 2.5rem;
 	right: 1.25rem;
-	width: 6rem;
+	width: 20%;
+	max-width: 300px;
+	height: 17.5%;
 	font-size: 0.5rem;
 	padding: 0.5rem 0;
 	border: 1px solid rgba(211, 211, 211, 0.5);
@@ -49,7 +51,6 @@
 }
 .graphPopup span {
 	color: lightgray;
-	font-size: 0.5rem;
 	padding-left: 0.5rem;
 }
 .graphPopup p:not(last-child) {
@@ -68,6 +69,11 @@
 	}
 	.pie > canvas {
 		min-height: 22.5rem;
+	}
+	.graphPopup {
+		font-size: 0.75rem;
+		width: 150px;
+		height: 22%;
 	}
 }
 @media (min-width: 990px) {
