--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -26,6 +26,7 @@
 	list-style: none;
 	cursor: pointer;
 }
+
 .group {
 	position: relative;
 }
@@ -54,4 +55,13 @@
 .hovered:hover span,
 .hovered:hover svg {
 	color: hsl(0, 10%, 100%, 1);
+}
+.sidePop {
+	position: absolute;
+	left: 7rem;
+	z-index: 100;
+	display: flex;
+	flex-direction: column;
+	width: 5rem;
+	background-color: white;
 }
