--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -6,6 +6,7 @@
 	padding-inline: 1rem;
 	align-items: center;
 	overflow-x: hidden;
+	transition: all 0.25s ease-in;
 }
 .container {
 	gap: 0.25rem;
