--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -26,7 +26,6 @@
 	list-style: none;
 	cursor: pointer;
 }
-
 .group {
 	position: relative;
 }
@@ -57,11 +56,16 @@
 	color: hsl(0, 10%, 100%, 1);
 }
 .sidePop {
-	position: absolute;
-	left: 7rem;
-	z-index: 100;
+	position: static;
+	width: 80%;
 	display: flex;
+	margin-top: 5%;
+	margin-left: 10%;
 	flex-direction: column;
-	width: 5rem;
 	background-color: white;
+	transition: all 0.25s ease-in-out;
+}
+
+.sidePop span {
+	padding: 0.5rem 0;
 }
